Added JSON converter tests V1 and V2 completed